# lbrp

./: .gitignore  Cargo.toml  README.md  deploy-config.json  deploy-config.yaml  lbrp-service.yaml  lbrp.service
.cargo/: config.toml
.depl/: auth-frontend.json  config.yaml
lbrp-auth-frontend/: Cargo.toml  index.html  input.css
lbrp-auth-frontend/src/: main.rs  requests.rs
lbrp-auth-frontend/src/components/: button.rs  icon.rs  input.rs  mod.rs  theme.rs
lbrp-cba-autovalidate/: Cargo.toml
lbrp-cba-autovalidate/src/: lib.rs  main.rs
lbrp-cli-authorize/: Cargo.toml
lbrp-cli-authorize/src/: lib.rs  utils.rs
lbrp-types/: Cargo.toml
lbrp-types/src/: lib.rs
src/: c3a.rs  client.rs  config.rs  cors_handling.rs  error_handling.rs  main.rs  proxy_client.rs  router.rs  static.rs
src/authnz/: auth_router.rs  middleware.rs  mod.rs
src/c3a/: auth_client.rs  auth_router.rs  middleware.rs  mod.rs
