[package]
name = "lbrp"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
c3a-server-sdk = { workspace = true, optional = true, features = ["allow-unsafe-http"] }
cc-server-kit = { workspace = true, features = ["cors", "oapi", "otel", "http3", "proxy", "force-https", "reqwest-http3"] }
cc-static-server = { workspace = true }
futures-util = { workspace = true }
lbrp-types = { workspace = true }
notify = { workspace = true }
quick-xml = { workspace = true }
reqwest = { workspace = true, features = ["http3", "http2", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
default = ["c3a"]
c3a = ["dep:c3a-server-sdk"]

[workspace]
members = [
  ".",
  "lbrp-auth-frontend",
  "lbrp-cba-autovalidate",
  "lbrp-types",
  "lbrp-cli-authorize",
]
resolver = "2"

[workspace.package]
version = "0.2.3"
edition = "2024"
authors = ["Klimenty Titov <aclo.create@gmail.com>"]

[workspace.dependencies]
lbrp-cli-authorize = { path = "lbrp-cli-authorize" }
lbrp-types = { path = "lbrp-types" }

c3a-common = { git = "ssh://git@31.31.65.38:20995/impulse-sw/c3a.git", tag = "0.1.2", default-features = false }
c3a-client-sdk = { git = "ssh://git@31.31.65.38:20995/impulse-sw/c3a.git", tag = "0.1.2" }
c3a-server-sdk = { git = "ssh://git@31.31.65.38:20995/impulse-sw/c3a.git", tag = "0.1.2" }
cc-server-kit = { git = "https://github.com/impulse-sw/cc-services.git", tag = "0.8.1-2", default-features = false }
cc-static-server = { git = "https://github.com/impulse-sw/cc-services.git", tag = "0.8.1-2" }
cc-ui-kit = { git = "https://github.com/impulse-sw/cc-services.git", tag = "0.8.1-2" }
cc-utils = { git = "https://github.com/impulse-sw/cc-services.git", tag = "0.8.1-2", default-features = false }
futures-util = { version = "0.3", default-features = false }
hex = "0.4"
icondata = { version = "0.5", default-features = false }
js-sys = "0.3.77"
leptos = { version = "0.7", default-features = false }
leptos_icons = { git = "https://github.com/impulse-sw/leptos-icons.git", branch = "feat/add-class-support" }
notify = "6.1"
quick-xml = "0.37.5"
reqwest = { version = "0.12", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
tokio = "1"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3" }

[profile.wasm]
inherits = "release"
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = "debuginfo"
