[package]
name = "impulse-lbrp"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
authnz-server-sdk = { workspace = true, optional = true, features = ["allow-unsafe-http", "impulse-server-kit", "custom"] }
chrono = { workspace = true }
futures-util = { workspace = true }
impulse-server-kit = { workspace = true, features = ["cors", "oapi", "otel", "http3", "proxy", "force-https", "reqwest-http3", "compression"] }
impulse-static-server = { workspace = true }
lbrp-types = { workspace = true }
mimalloc = { workspace = true }
notify = { workspace = true }
quick-xml = { workspace = true }
reqwest = { workspace = true, features = ["http3", "http2", "rustls-tls"] }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }

[features]
default = ["authnz"]
authnz = ["dep:authnz-server-sdk"]
warn-about-incorrect-requests = []

[workspace]
members = [
  ".",
  "lbrp-auth-frontend",
  "lbrp-cba-autovalidate",
  "lbrp-types",
  "lbrp-cli-authorize",
]
resolver = "2"

[workspace.package]
version = "0.2.13"
edition = "2024"
authors = ["Klimenty Titov <aclo.create@gmail.com>"]

[workspace.dependencies]
lbrp-cli-authorize = { path = "lbrp-cli-authorize" }
lbrp-types = { path = "lbrp-types" }

# authnz-common = { git = "ssh://git@31.31.65.38:20995/impulse-sw/impulse-authnz.git", tag = "0.2.1", default-features = false }
# authnz-client-sdk = { git = "ssh://git@31.31.65.38:20995/impulse-sw/impulse-authnz.git", tag = "0.2.1" }
# authnz-server-sdk = { git = "ssh://git@31.31.65.38:20995/impulse-sw/impulse-authnz.git", tag = "0.2.1", default-features = false }
authnz-common = { version = "0.2.1", default-features = false }
authnz-client-sdk = { version = "0.2.1" }
authnz-server-sdk = { version = "0.2.1", default-features = false }
chrono = { version = "0.4" }
futures-util = { version = "0.3", default-features = false }
hex = "0.4"
icondata = { version = "0.5", default-features = false }
# impulse-server-kit = { git = "https://github.com/impulse-sw/cc-services.git", tag = "0.11.1", default-features = false }
# impulse-static-server = { git = "https://github.com/impulse-sw/cc-services.git", tag = "0.11.1" }
# impulse-ui-kit = { git = "https://github.com/impulse-sw/cc-services.git", tag = "0.11.1" }
# impulse-utils = { git = "https://github.com/impulse-sw/cc-services.git", tag = "0.11.1", default-features = false }
impulse-server-kit = { version = "0.12.0-alpha.3", default-features = false }
impulse-static-server = { version = "0.12.0-alpha.3" }
impulse-ui-kit = { version = "0.12.0-alpha.3" }
impulse-utils = { version = "0.12.0-alpha.3", default-features = false }
js-sys = "0.3.77"
leptos = { version = "0.7", default-features = false }
leptos_icons = { git = "https://github.com/impulse-sw/leptos-icons.git", branch = "feat/add-class-support" }
mimalloc = "0.1"
notify = "6.1"
quick-xml = "0.37.5"
reqwest = { version = "^0.12.22", default-features = false }
rustls = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
tokio = "^1.46.1"
tracing = "0.1"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3" }

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
