[package]
name = "lbrp-auth-frontend"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
hex = { workspace = true }
icondata = { workspace = true, features = ["lucide"] }
impulse-ui-kit = { workspace = true }
impulse-utils = { workspace = true, features = ["cresult", "reqwest"] }
lbrp-cli-authorize = { workspace = true }
lbrp-types = { workspace = true }
leptos = { workspace = true, features = ["csr"] }
leptos-use = { workspace = true }
reqwest = { workspace = true, features = ["json", "cookies", "multipart"] }
