[package]
name = "lbrp-cba-autovalidate"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lbrp-cli-authorize = { workspace = true }
js-sys = { workspace = true }
reqwest = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["Window", "Document", "Location"] }
